--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Number guessing game</title>
+    <title>Jeux des nombres</title>
 
     <style>
       html {
@@ -25,14 +25,14 @@
   </head>
 
   <body>
-    <h1>Number guessing game</h1>
+    <h1>Le jeux des nombres</h1>
 
-    <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
+    <p>Nous avons selectioné un nombre entre 1 et 100. Essayez de le trouver en moins de 10 essais ! Nous vous dirons si le nombre saisi est trop petit ou trop grand.</p>
 
     <div class="form">
-      <label for="guessField">Enter a guess: </label>
+      <label for="guessField">Entrez un nombre : </label>
       <input type="text" id="guessField" class="guessField">
-      <input type="submit" value="Submit guess" class="guessSubmit">
+      <input type="submit" value="Valider" class="guessSubmit">
     </div>
 
     <div class="resultParas">
