Ajout de la google font

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
 
     <title>Jeux des nombres</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
     <style>
       html {
-        font-family: sans-serif;
+        font-family: 'Lato' , sans-serif;
       }
 
       body {
